src/test/ui/issues/issue-14772.stderr
error: only functions may be used as tests
  --> $DIR/issue-14772.rs:14:1
   |
LL | mod foo {} //~ ERROR only functions may be used as tests
   | ^^^^^^^^^^

error: aborting due to previous error

